--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,11 +1,47 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
         <meta charset="UTF-8" />
         <title>Title</title>
     </head>
-    <body>
+<style>
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    }
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+</style>
+<body>
+
+<ul>
+  <li><a href="/">Front page</a></li>
+  <li th:each="category : ${categories}"><a th:href="@{/category/{id}(id=${category.id})}" th:text="${category.name}">Category name</a></li>
+  <li><a href="/writers">Writers</a></li>
+  <li style="float:right"><a class="active" href="#about">About</a></li>
+</ul>
 
 
 
