--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -1,11 +1,13 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:include="base">
     <head lang="en">
-
+      <link rel="import" href="/path/to/navbar.html">
         <meta charset="UTF-8" />
         <title>Welcome to News paradise!</title>
     </head>
     <body>
+
+    <div th:fragment="content">
 
       <h2>Newest News</h2>
 
@@ -18,6 +20,7 @@
       </ul>
 
       <!-- MUUTA NÄKYVIIN JA VAIHA SESSIONISTA ID VAIN JOS KIRJAUTUNUT -->
+
       <form method="POST" th:action="@{/news}">
         <input type="text" name="headline"/>
         <input type="text" name="lead"/>
@@ -30,7 +33,7 @@
         </select>
         <input type="submit"/>
       </form>
-
+    </div>
     </body>
 
 </html>
