--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -20,7 +20,6 @@
           <option th:each="writer : ${writers}" th:text="${writer.name}" th:value="${writer.id}">Writer name</option>
         </select>
         Edit categories: <select name="categoryList" id="categoryList" multiple="multiple">
-          <option value="">Choose categories</option>
           <option th:each="category : ${categories}" th:text="${category.name}" th:value="${category.id}">Category name</option>
         </select>
       </form>
@@ -30,7 +29,7 @@
         <input type="submit" value="Edit article" form="form"/>
         <br>
         <h3> Delete <span th:text="${newsitem.headline}"/></h3>
-        <form method="DELETE" name="deleteform" th:id="deleteform" th:action="@{/news/{id}/edit(id=${newsitem.id})}">
+        <form th:method="DELETE" name="deleteform" th:id="deleteform" th:action="@{/news/{id}/edit(id=${newsitem.id})}">
           <input type="submit" value="Delete article" form="deleteform"/>
         </form>
 
